# openclaw-crawler

./: Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  pyproject.toml
src/openclaw_crawler/: __init__.py  cli.py  skill.py
src/openclaw_crawler/adapters/: platform_adapter.py
src/openclaw_crawler/core/: web_crawler.py  wechat_crawler.py
src/openclaw_crawler/storage/: database.py
